@@ -46,8 +46,8 @@ Write a master boot record to device.
 .B \-w, \-\-write
 Write automatically selected boot record to device.
 .TP
-.B \-k, \-\-keeplabel
-Do not reset partition disk label
+.B \-l, \-\-wipelabel
+Reset partition disk label in boot record.
 .TP
 .B \-f, \-\-force
 Force writing of boot record.
